--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
@@ -13,8 +14,13 @@
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
+    "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.2.4",
     "morgan": "~1.9.1",
+    "nodemailer": "^6.9.3",
+    "nodemailer-smtp-transport": "^2.7.4"
+  },
+  "devDependencies": {
     "nodemon": "^2.0.22"
   }
 }
